# hatch-calver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hatch_calver/: __init__.py  bump.py  calver_scheme.py  hatch_hooks.py
tests/: test_hatch_calver.py
